<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/edit_text_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="continent, animal, gadget ..."
            android:inputType="textCapWords" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question2" />

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radio_gambia"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q2_a1" />

            <RadioButton
                android:id="@+id/radio_europe"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q2_a2" />

            <RadioButton
                android:id="@+id/radio_madagascar"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q2_a3" />

            <RadioButton
                android:id="@+id/radio_sri_lanka"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q2_a4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question3" />

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radio_ancestors_yes"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q3_a1" />

            <RadioButton
                android:id="@+id/radio_ancestors_no"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q3_a2" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/checkbox_30g"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:text="@string/q4_a1" />

        <CheckBox
            android:id="@+id/checkbox_9kg"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:text="@string/q4_a2" />

        <CheckBox
            android:id="@+id/checkbox_50kg"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:text="@string/q4_a3" />

        <CheckBox
            android:id="@+id/checkbox_200kg"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/q4_a4" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question5" />

        <CheckBox
            android:id="@+id/checkbox_insects"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:text="@string/q5_a1" />

        <CheckBox
            android:id="@+id/checkbox_fruit_vegetables"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:text="@string/q5_a2" />

        <CheckBox
            android:id="@+id/checkbox_plants"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:text="@string/q5_a3" />

        <CheckBox
            android:id="@+id/checkbox_fish"
            style="@style/CheckBoxAndRadioButtonStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/q5_a4" />
        
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question6" />

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radio_live_in_groups"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q6_a1" />

            <RadioButton
                android:id="@+id/radio_live_in_pairs"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q6_a2" />

            <RadioButton
                android:id="@+id/radio_live_alone"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q6_a3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question7" />

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radio_18_fingers"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q7_a1" />

            <RadioButton
                android:id="@+id/radio_16_fingers"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q7_a2" />

            <RadioButton
                android:id="@+id/radio_20_fingers"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q7_a3" />

            <RadioButton
                android:id="@+id/radio_22_fingers"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q7_a4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/question8" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"

            android:src="@drawable/lemur" />

        <RadioGroup style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radio_is_lemur"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q8_a1" />

            <RadioButton
                android:id="@+id/radio_not_lemur"
                style="@style/CheckBoxAndRadioButtonStyle"
                android:text="@string/q8_a2" />
        </RadioGroup>

        <Button
            style="@style/ButtonStyle"
            android:onClick="submitAnswers"
            android:text="Submit" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="resetScore"
            android:text="reset" />

    </LinearLayout>
</ScrollView>